sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:5: error: not found: value blue
		if(getCouleur(i)==blue){
                                  ^